--- a/SpecFlowExercise/SpecFlowExercise.csproj
+++ b/SpecFlowExercise/SpecFlowExercise.csproj
@@ -18,8 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\" />
-    <Folder Include="Support\" />
+    <Folder Include="features\" />
   </ItemGroup>
 
 </Project>
